--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
   "author": "MAKOSCAFEE <barnabasmakonda@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index"
+    "dev": "nodemon --exec babel-node index"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "graphql-yoga": "^1.16.2",
+    "mongoose": "^5.2.17"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.18.4"
   }
 }
